# design

./: .gitignore  Example.py  LICENSE  README.md  example.py  pyproject.toml  requirements-py311-linux64.txt  requirements-py311-macos_x86_64.txt  requirements-py311-win64.txt  requirements-py312-linux64.txt  requirements-py312-win64.txt  requirements.txt  run_py_models.py  run_tcl_models.py
data/: IR-3-3-3.xlsx  R-3-3-3.xlsx  customs.db  example-custom-geometry.xlsx  irregular-geometry.xlsx  place_holder_data.csv  simple-nonuniform-geometry.xlsx  simple-uniform-geometry.xlsx
docs/: README.md
examples/: design_with_specific_geometry.py  how_to_work_with_bcim.py  making_L_shape_geometry.py  making_complex_geometry.py  making_simple_nonuniform_geometry.py  making_simple_uniform_geometry.py  reading_custom_geometry.py  run_batch_nspa.py
scripts/: column_testing.py  design_checking.py  design_with_specific_geometry.py  how_to_work_with_bcim.py  making_L_shape_geometry.py  making_complex_geometry.py  making_simple_nonuniform_geometry.py  making_simple_uniform_geometry.py  paper_cases.py  place_holder_script.py  reading_custom_geometry.py  run_batch_nspa.py  run_bed_workflow.py
simdesign/rcmrf/: __init__.py
simdesign/utils/: mesh.py  misc.py  units.py
src/: __init__.py  utils.py
src/geometry/: frame.py  mesh.py
static/: layouts_and_variables.xlsx
test/: __init__.py
tests/: place_holder_test.py  test1.py  test_parametrization.py  test_rcmrf.py
tmp/: GEM taxonomy attributes.txt  complex-geometry.html  example-custom-geometry.html  irregular-geometry.html  irregular-geometry.xlsx  modified-custom-geometry.html  simple-nonuniform-geometry.html  simple-nonuniform-geometry.xlsx  simple-uniform-geometry.html
(+680 files in other folders)
